# accounting-softare

./: README.md
SaleTrackInventory/: app.py  auth.py  database.py  local.db  pyproject.toml  replit.nix  storage.py
SaleTrackInventory/models/: accounting.py  customers.py
SaleTrackInventory/static/css/: custom.css
SaleTrackInventory/static/js/: dashboard.js  transactions.js
SaleTrackInventory/templates/: accounting_reports.html  base.html  dashboard.html  inventory.html  login.html  purchases.html  register.html  reports.html  sales.html
SaleTrackInventory/utils/: bill_generator.py  bill_sender.py
